--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "complementary_color"
+name = "debugme"
 version = "0.1.0"
-authors = ["Yvan Sraka <yvan@sraka.xyz>"]
+authors = ["tcatonet <catonethomas@yahoo.fr>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
